--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     @@include('./template/_header.html')
 
     <div class="container">
-        <div class="articles">
+        <div class="articles scroll-reveal">
             <div class="articles__body">
                 <div class="articles__item">
                     <a href="#" class="articles__img">
@@ -117,7 +117,7 @@
             </div>
         </div>
 
-        <div class="offers">
+        <div class="offers scroll-reveal">
             <div class="">
                 <div class="offers__title">Будьте в курсе самых выгодных<br> предложений от ATASU GROUP</div>
                 <p class="offers__subtitle">подписывайтесь на нашу рассылку, напишите нам: marketing1@atasu.com</p>
@@ -125,7 +125,7 @@
             </div>
         </div>
 
-        <div class="video">
+        <div class="video scroll-reveal">
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" width="560" height="315"
                         src="https://www.youtube.com/embed/MxHQCvnOqEk" title="YouTube video player"
@@ -142,20 +142,20 @@
         </div>
     </div>
 
-    <div class="numbers">
+    <div class="numbers scroll-reveal-stats">
         <div class="container">
             <div class="numbers__title">Atasu group в цифрах</div>
-            <div class="numbers__body">
+            <div class="numbers__body scroll-reveal">
                 <div class="numbers__item">
-                    <div class="numbers__count">8000</div>
+                    <div class="numbers__count" id="countbar-1">8000</div>
                     <p class="numbers__name">Клиентов по всему миру</p>
                 </div>
                 <div class="numbers__item">
-                    <div class="numbers__count">1500</div>
+                    <div class="numbers__count" id="countbar-2">1500</div>
                     <p class="numbers__name">Квалифицированных сотрудников</p>
                 </div>
                 <div class="numbers__item">
-                    <div class="numbers__count">23</div>
+                    <div class="numbers__count" id="countbar-3">23</div>
                     <p class="numbers__name">Года на рынке Казахстана</p>
                 </div>
             </div>
@@ -163,7 +163,7 @@
     </div>
 
     <div class="container">
-        <div class="business">
+        <div class="business scroll-reveal">
             <div class="business__title">Atasu group в деле</div>
             <div class="business__body">
                 <div class="business__item">
@@ -194,7 +194,7 @@
 
         </div>
 
-        <div class="logistic">
+        <div class="logistic scroll-reveal">
             <div class="logistic__item">
                 <div class="logistic__img">
                     <i class="icon icon-logistic"></i>
@@ -238,7 +238,7 @@
         </div>
     </div>
 
-    <div class="delivery">
+    <div class="delivery scroll-reveal">
         <div class="container">
             <div class="delivery__title">Atasu Group <br>доставка по всему миру</div>
             <div class="delivery__body">
@@ -247,7 +247,7 @@
         </div>
     </div>
 
-    <div class="contacts">
+    <div class="contacts scroll-reveal">
         <div class="container">
             <div class="contacts__title">Контакты</div>
             <div class="contacts__body">
